test/expected/explain_cast_sti.out
explain (static int)x
         ^
10: error: can not cast into "static"
